Fix link formatting in practical advice section

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ const CHEATSHEET_HTML=`
 <div class="card">
 <h2>Praktiske råd</h2>
 <ul class="note">
-  <li>Download Download<a class="lnk" href="https://www.airalo.com" target="_blank">airalo.com</a> og køb et eSIM hvis du ikke har world data. Koster omkring 10 USD alt efter datapakke.</li>
+  <li><a class="lnk" href="https://www.airalo.com" target="_blank">airalo.com</a> og køb et eSIM hvis du ikke har world data. Koster omkring 10 USD alt efter datapakke.</li>
   <li>Medbring altid ID, når du går ud. Politiet laver sjældent tjek, men det kan ske.</li>
   <li>Kontanter, kontanter, kontanter (valuta: RSD, ikke EUR). Mange barer tager kort, men taxaer, kiosker og små kafanas gør ofte ikke. Brug kun hæveautomater, der er ved en bank.</li>
   <li>Brug Bolt, CarGo eller Yandex Go apps til transport – de er pålidelige og billige. Hvis du prajer en taxa på gaden, aftal prisen på forhånd. Normale ture i byen koster 600–1200 RSD (ca. 5–10 €). Turen fra byen til villaen koster typisk 2500–3000 RSD.</li>
