--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ ul.note li{margin:12px 0 14px;line-height:1.55}
     <div class="tabs" id="tabs"></div>
   </div>
 
-  <div class="marquee"><span>💀 Slavic hardbass loading… Burek and rakija required for entry 💀</span></div>
+  <div class="marquee"><span>☠️ Slavic hardbass loading… Burek and rakija required for entry ☠️</span></div>
 
   <div class="btnbar">
     <button id="dl" class="btn alt">Download offline</button>
