Update schedule and activity titles in index.html

--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@ const PLAN=[
       {t:"17:30",title:"Lander i Beograd"},
       {t:"18:00",title:"Transfer til Villa Saga Paradiso"},
       {t:"19:30",title:"Check ind i villaen",note:`<a class="lnk" href="https://maps.app.goo.gl/aBYmCsfGfky1yp8t7" target="_blank">Kort</a>`},
-      {t:"21:00",title:"Supermarked besøg og pizza hygge ved villaen med fadøl og pool",note:`<a class="lnk" href="https://maps.app.goo.gl/vqFFazi2S484eR869" target="_blank">Kort</a>`}
+      {t:"20:30",title:"Pizza og fadøl ved poolen",note:`<a class="lnk" href="https://maps.app.goo.gl/vqFFazi2S484eR869" target="_blank">Kort</a>`}
     ]
   },
   {
     date:"Fredag 24/10",
-    label:"Yugo tour, mikrobryggerier og splav",
+    label:"Yugo tour, Kafana dinner og Skadarlija",
     items:[
       {t:"09:30",title:"Morgenmad i villaen"},
       {t:"11:30",title:"Taxa til downtown til Yugo tours",note:`<a class="lnk" href="https://maps.app.goo.gl/AXgxogZ46szpTFFw9" target="_blank">Kort</a>`},
@@ -118,7 +118,7 @@ const PLAN=[
   },
   {
     date:"Lørdag 25/10",
-    label:"Backyard Olympics, Skydebane, mikrobryggeri pubcrawl",
+    label:"Backyard Olympics, Skydebane, mikrobryggeri pubcrawl og splav",
     items:[
       {t:"09:30",title:"Morgenmad i villaen"},
       {t:"11:00",title:"Backyard Olympics (pool, basket, tennis, fodbold)"},
