Update marquee text in index.html

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ ul.note li{margin:12px 0 14px;line-height:1.55}
     <div class="tabs" id="tabs"></div>
   </div>
 
-  <div class="marquee"><span>☠️ BALKAN ENERGI LOADER ☠️ TURBO-FOLK SPILLER ☠️ SPLAV ÅBEN ☠️ RAKIJA NED, BURKEK OP ☠️ STOLTHED VÆK ☠️ ŽIVELI ☠️ </span></div>
+  <div class="marquee"><span>☠️ BALKAN ENERGI LOADER ☠️ TURBO-FOLK SPILLER ☠️ SPLAV ÅBEN ☠️ HUSK ELEKTROLYTTER ☠️ RAKIJA NED, BURKEK OP ☠️ STOLTHED VÆK ☠️ ŽIVELI ☠️ </span></div>
 
   <div class="btnbar">
     <button id="dl" class="btn alt">Download offline</button>
