Update practical advice in index.html
Added a link to download boarding pass and updated advice.

--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@ const CHEATSHEET_HTML=`
 <div class="card">
 <h2>Praktiske råd</h2>
 <ul class="note">
+  <li><a href="https://drive.google.com/drive/folders/11tx5UVQiG62UPj0_zZv9k4YPQbzobrQ2?usp=sharing" title="Visit Example">Download dit boarding pass her</a>. Brug venligst kun dit eget.</li>
   <li>Download <a href="https://www.airalo.com" title="Visit Example">airalo.com</a> og køb et eSIM hvis du ikke har world data. Koster omkring 10 USD alt efter datapakke.</li>
   <li>Medbring altid ID, når du går ud. Politiet laver sjældent tjek, men det kan ske.</li>
   <li>Kontanter, kontanter, kontanter (valuta: RSD, ikke EUR). Mange barer tager kort, men taxaer, kiosker og små kafanas gør ofte ikke. Brug kun hæveautomater, der er ved en bank.</li>
