--- a/index.html
+++ b/index.html
@@ -16,9 +16,24 @@ body{background-image: radial-gradient(circle at 50% 10%, rgba(255,0,0,.12), rgb
 .tabs{display:flex;gap:6px;flex-wrap:wrap;margin-top:8px}
 .tabs button{flex:1;min-width:46%;padding:10px 8px;background:#1a0000;border:3px outset #ff2222;color:#fff;border-radius:6px;font-weight:800;text-shadow:0 0 6px #ff3333;box-shadow:0 6px 18px rgba(0,0,0,.35)}
 .tabs button.active{background:#ffe600;border-color:#ff0000;color:#220000;text-shadow:none}
-.marquee{margin:10px 0;background:#220000;border-top:3px ridge #ff0000;border-bottom:3px ridge #ff0000;overflow:hidden;white-space:nowrap}
-.marquee span{display:inline-block;padding:8px;color:#ffaaaa;animation:scroll 16s linear infinite;letter-spacing:.3px}
-@keyframes scroll{0%{transform:translateX(100%)}100%{transform:translateX(-100%)}}
+.marquee{
+  margin:10px 0;
+  background:#220000;
+  border-top:3px ridge #ff0000;
+  border-bottom:3px ridge #ff0000;
+  overflow:hidden;
+  white-space:nowrap;
+}
+.marquee span{
+  display:inline-block;
+  padding:8px;
+  color:#ffaaaa;
+  animation:scroll 16s linear infinite;
+}
+@keyframes scroll{
+  0%   { transform: translateX(0); }      /* starts on-screen */
+  100% { transform: translateX(-100%); }  /* moves fully left */
+}
 .btnbar{display:flex;gap:8px;margin:10px 0}
 .btn{flex:1;padding:12px 10px;background:#220033;border:3px outset #ff59f8;color:#fff;border-radius:6px;font-weight:900;text-transform:uppercase}
 .btn.alt{background:#003313;border-color:#49ff9a}
@@ -52,7 +67,9 @@ ul.note li{margin:12px 0 14px;line-height:1.55}
     <div class="tabs" id="tabs"></div>
   </div>
 
-  <div class="marquee"><span>☠️ BALKAN ENERGI LOADER ☠️ TURBO-FOLK SPILLER ☠️ SPLAV ÅBEN ☠️ HUSK ELEKTROLYTTER ☠️ RAKIJA NED, BURKEK OP ☠️ STOLTHED VÆK ☠️ ŽIVELI ☠️ </span></div>
+ <div class="marquee">
+  <span>☠️ BALKAN ENERGI LOADER ☠️ TURBO-FOLK SPILLER ☠️ SPLAV ÅBEN ☠️ HUSK ELEKTROLYTTER ☠️ RAKIJA NED, BUREK OP ☠️ STOLTHED VÆK ☠️ ŽIVELI ☠️</span>
+</div>
 
   <div class="btnbar">
     <button id="dl" class="btn alt">Download offline</button>
