--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ ul.note li{margin:12px 0 14px;line-height:1.55}
   </div>
 
  <div class="marquee">
-  <span>☠️ BALKAN ENERGI LOADER ☠️ TURBO-FOLK SPILLER ☠️ SPLAV ÅBEN ☠️ HUSK ELEKTROLYTTER ☠️ RAKIJA NED, BUREK OP ☠️ STOLTHED VÆK ☠️ ŽIVELI ☠️</span>
+  <span>☠️ BALKAN ENERGI LOADER ☠️ TURBO-FOLK SPILLER ☠️ SPLAV ÅBEN ☠️ HUSK ELEKTROLYTTER ☠️ RAKIJA NED, BUREK OP ☠️ STOLTHED VÆK ☠️ ŽIVELI ☠️ BALKAN ENERGI LOADER ☠️ TURBO-FOLK SPILLER ☠️ SPLAV ÅBEN ☠️ HUSK ELEKTROLYTTER ☠️ RAKIJA NED, BUREK OP ☠️ STOLTHED VÆK ☠️ ŽIVELI ☠️ BALKAN ENERGI LOADER ☠️ TURBO-FOLK SPILLER ☠️ SPLAV ÅBEN ☠️ HUSK ELEKTROLYTTER ☠️ RAKIJA NED, BUREK OP ☠️ STOLTHED VÆK ☠️ ŽIVELI ☠️ BALKAN ENERGI LOADER ☠️ TURBO-FOLK SPILLER ☠️ SPLAV ÅBEN ☠️ HUSK ELEKTROLYTTER ☠️ RAKIJA NED, BUREK OP ☠️ STOLTHED VÆK ☠️ ŽIVELI ☠️ BALKAN ENERGI LOADER ☠️ TURBO-FOLK SPILLER ☠️ SPLAV ÅBEN ☠️ HUSK ELEKTROLYTTER ☠️ RAKIJA NED, BUREK OP ☠️ STOLTHED VÆK ☠️ ŽIVELI ☠️ BALKAN ENERGI LOADER ☠️ TURBO-FOLK SPILLER ☠️ SPLAV ÅBEN ☠️ HUSK ELEKTROLYTTER ☠️ RAKIJA NED, BUREK OP ☠️ STOLTHED VÆK ☠️ ŽIVELI ☠️ BALKAN ENERGI LOADER ☠️ TURBO-FOLK SPILLER ☠️ SPLAV ÅBEN ☠️ HUSK ELEKTROLYTTER ☠️ RAKIJA NED, BUREK OP ☠️ STOLTHED VÆK ☠️ ŽIVELI ☠️ BALKAN ENERGI LOADER ☠️ TURBO-FOLK SPILLER ☠️ SPLAV ÅBEN ☠️ HUSK ELEKTROLYTTER ☠️ RAKIJA NED, BUREK OP ☠️ STOLTHED VÆK ☠️ ŽIVELI ☠️ BALKAN ENERGI LOADER ☠️ TURBO-FOLK SPILLER ☠️ SPLAV ÅBEN ☠️ HUSK ELEKTROLYTTER ☠️ RAKIJA NED, BUREK OP ☠️ STOLTHED VÆK ☠️ ŽIVELI ☠️ BALKAN ENERGI LOADER ☠️ TURBO-FOLK SPILLER ☠️ SPLAV ÅBEN ☠️ HUSK ELEKTROLYTTER ☠️ RAKIJA NED, BUREK OP ☠️ STOLTHED VÆK ☠️ ŽIVELI ☠️ BALKAN ENERGI LOADER ☠️ TURBO-FOLK SPILLER ☠️ SPLAV ÅBEN ☠️ HUSK ELEKTROLYTTER ☠️ RAKIJA NED, BUREK OP ☠️ STOLTHED VÆK ☠️ ŽIVELI ☠️</span>
 </div>
 
   <div class="btnbar">
