Revise itinerary for trip with updated details
Updated itinerary details for the trip, including changes to meal descriptions and activity titles.

--- a/index.html
+++ b/index.html
@@ -107,43 +107,41 @@ const PLAN=[
     items:[
       {t:"11:30",title:"Mødes i lufthavnen (København)"},
       {t:"13:15",title:"Fly til Berlin (U25266)"},
-      {t:"14:15",title:"Lander i Berlin"},
       {t:"15:40",title:"Fly til Begrad (W64010)"},
-      {t:"17:30",title:"Lander i Beograd"},
       {t:"18:00",title:"Transfer til Villa Saga Paradiso"},
       {t:"19:30",title:"Check ind i villaen",note:`<a class="lnk" href="https://maps.app.goo.gl/aBYmCsfGfky1yp8t7" target="_blank">Kort</a>`},
-      {t:"20:30",title:"Pizza og fadøl ved poolen",note:`<a class="lnk" href="https://maps.app.goo.gl/vqFFazi2S484eR869" target="_blank">Kort</a>`}
+      {t:"20:30",title:"Pizza og fadøl ved poolen - nogen skal hente snacks i supermarkedet",note:`<a class="lnk" href="https://maps.app.goo.gl/vqFFazi2S484eR869" target="_blank">Kort</a>`}
     ]
   },
   {
     date:"Fredag 24/10",
     label:"Yugo tour, Kafana dinner og Skadarlija",
     items:[
-      {t:"09:30",title:"Morgenmad i villaen"},
-      {t:"11:30",title:"Taxa til downtown til Yugo tours",note:`<a class="lnk" href="https://maps.app.goo.gl/AXgxogZ46szpTFFw9" target="_blank">Kort</a>`},
-      {t:"12:00",title:"Yugo Tour til brutalistisk arkitektur, Titos luksustog og andet",note:`<a class="lnk" href="https://yugotour.com" target="_blank">Hjemmeside</a>`},
-      {t:"15:00",title:"Hvis vejret er godt: Mama Shelter rooftop bar og snack. Hvis ikke: burek fra Užina",
+      {t:"09:30",title:"Morgenmads buffet i villaen - vores værtinde sætter op og fjerner igen. Du skal gøre intet andet end at nyde og spise."},
+      {t:"11:30",title:"Taxa til Yugo tours",note:`<a class="lnk" href="https://maps.app.goo.gl/AXgxogZ46szpTFFw9" target="_blank">Kort</a>`},
+      {t:"12:00",title:"Yugo Tour - brutalistisk arkitektur, Titos luksustog og andet godt",note:`<a class="lnk" href="https://yugotour.com" target="_blank">Hjemmeside</a>`},
+      {t:"15:00",title:"Hvis vejret er godt: Mama Shelter rooftop bar og snack. Hvis ikke: Burek fra Užina",
         note:`<a class="lnk" href="https://maps.app.goo.gl/k6AvdqtZ3itPmSQq7" target="_blank">Kort (Mama Shelter)</a>
               <a class="lnk" href="https://maps.app.goo.gl/FuQiXE44Ki7bodCB9" target="_blank">Kort (Užina)</a>`},
-      {t:"15:30",title:"Gåtur gennem Kalemegdan og Belgrade Fortress. Vi fortsætter gennem centrum (måske forbi en bar) til vi rammer Skadarlija",
+      {t:"15:30",title:"Gåtur gennem Kalemegdan og Belgrade Fortress. Vi fortsætter gennem centrum (måske forbi en bar) til vi rammer Skadarlija - Beograds boheme-kvarter - en brostensbelagt gade fuld af livemusik, gamle kafanas, og duften af grill og rakija.",
         note:`<a class="lnk" href="https://maps.app.goo.gl/KexxE4sx9Y9xLC61A" target="_blank">Kort</a>`},
-      {t:"20:00",title:"Kafana dinner på Mali Vrabac - der vil være rakija",
+      {t:"20:00",title:"Kafana dinner på Mali Vrabac. Maden er tung, Stemningen let  Maden er tung, Stemningen let.",
         note:`<a class="lnk" href="https://maps.app.goo.gl/N9nWMTykuMrbRNeT9" target="_blank">Kort</a>`},
-      {t:"23:00",title:"Skadarlija hidden bars party",
+      {t:"23:00",title:"Skadarlija skjulte barer - se kort. Hvem finder den bedste?",
         note:`<a class="lnk" href="https://www.google.com/maps/d/edit?mid=19pQHrPkREOXWZM15kHQFdD6acDqbed8&usp=sharing" target="_blank">Kort</a>`}
     ]
   },
   {
     date:"Lørdag 25/10",
-    label:"Backyard Olympics, Skydebane, mikrobryggeri pubcrawl og splav",
+    label:"Backyard Olympics, Skydebane, Mikrobryggeri Crawl og splav",
     items:[
-      {t:"09:30",title:"Morgenmad i villaen"},
+      {t:"09:30",title:"Morgenmads buffet i villaen"},
       {t:"11:00",title:"Backyard Olympics (pool, basket, tennis, fodbold)"},
       {t:"14:00",title:"Frokost i huset"},
       {t:"15:00",title:"Transport til Blok 23",note:`<a class="lnk" href="https://maps.app.goo.gl/88Pby85xqtw1YzTe8" target="_blank">Kort (Blok 23)</a>`},
       {t:"15:30",title:"Gåtur gennem Blok 23 (1970’ernes socialistiske bolig drøm) til shooting range",note:`<a class="lnk" href="https://maps.app.goo.gl/LQW2EddsNBvLUqak7" target="_blank">Kort (range)</a>`},
-      {t:"16:30",title:"Skydning på Belgrade shooting range",note:`<a class="lnk" href="https://belgradeshootingrange.com/wwi-wwii-antique-weapon-shooting/" target="_blank">Hjemmeside</a>`},
-      {t:"18:00",title:"Mikrobryggeri Pubcrawl. Sinnerman → Samo Pivo → Gunners → Dogma",
+      {t:"16:00",title:"Skydning på Belgrade shooting range - Kan du ramme noget som helst med en AK-47 Kalashnikov?",note:`<a class="lnk" href="https://belgradeshootingrange.com/wwi-wwii-antique-weapon-shooting/" target="_blank">Hjemmeside</a>`},
+      {t:"18:00",title:"Mikrobryggeri Crawl. Sinnerman → Samo Pivo → Gunners → Dogma",
         note:`<a class="lnk" href="https://maps.app.goo.gl/vFjRGhiKYks1jdJLA" target="_blank">Rutekort</a>`},
       {t:"23:00",title:"Splav (flodklub) Baraka",note:`<a class="lnk" href="https://maps.app.goo.gl/FUcZnzwqJUV2zoPb6" target="_blank">Kort</a>`}
     ]
@@ -152,7 +150,7 @@ const PLAN=[
     date:"Søndag 26/10",
     label:"Afslapning og Hjemrejse",
     items:[
-      {t:"09:30",title:"Morgenmad i villaen"},
+      {t:"09:30",title:"Morgenmads buffet i villaen"},
       {t:"10:30",title:"Check-ud"},
       {t:"11:00",title:"Kafeterija Magazin 1907 - Afslapning, kaffe, juice, shopping eller en tur rundt i byen",
         note:`<a class="lnk" href="https://maps.app.goo.gl/8jeZ63ek6JmoQsjF7" target="_blank">Kort</a>`},
