--- a/index.html
+++ b/index.html
@@ -105,7 +105,6 @@ const PLAN=[
     date:"Torsdag 23/10",
     label:"Ankomst og opvarmning",
     items:[
-      {t:"11:30",title:"Mødes i lufthavnen (København)"},
       {t:"13:15",title:"Fly til Berlin (U25266)"},
       {t:"15:40",title:"Fly til Begrad (W64010)"},
       {t:"18:00",title:"Transfer til Villa Saga Paradiso"},
@@ -182,8 +181,11 @@ const CHEATSHEET_HTML=`
 </div>
 <div class="card">
 <h2>Kort forklaring</h2>
-<div class="note"><strong>Splav:</strong> En flydende natklub eller bar på Donau eller Sava. Åbner sent og lukker først, når solen står op. Her danser man, drikker og mister tidsfornemmelsen.</div>
-<div class="note"><strong>Kafana:</strong> En traditionel serbisk taverne med lokal mad, rakija og levende musik. Her spiser man, drikker og ender ofte med at synge med husorkestret.</div>
+<div class="note"><strong>Splav:</strong> En flydende natklub eller bar på Donau eller Sava. Åbner sent og lukker først, når solen står op. Splav er Serbiens svar på Ibiza – bare uden regler og med billigere shots.</div>
+<div class="note"><strong>Kafana:</strong> En traditionel serbisk taverne med lokal mad, rakija og levende musik. Kafana er en blanding af værtshus, restaurant og spontan koncert – alt sammen under ét tag.</div>
+<div class="note"><strong>Burek:</strong> Balkan-versionen af comfort food: en sprød, fedtfyldt, spiralformet butterdej fyldt med kød, ost, spinat eller kartofler. Burek er den serbiske croissant, hvis croissanter blev opfundet af folk med tømmermænd og et solidt forhold til ost.</div>
+<div class="note"><strong>Yugo:</strong> Yugo’en er Jugoslaviens stolthed og verdens vittighed – en lille, firkantet bil bygget af håb, jern og kompromiser.</div>
+<div class="note"><strong>Brutalistisk arkitektur:</strong> Brutalismen er betonens kærlighedserklæring til funktionalitet – store, rå bygninger, støbt uden pynt. Det ligner noget fra BLade Runner, men lugter stærtk af kommunisme, men de står stadig som monumenter over noget kan være både galt og genialt. </div>
 </div>`;
 
 /* ====== TITO ====== */
