Change lunch title to BBQ buffet in index.html

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ const PLAN=[
     items:[
       {t:"09:30",title:"Morgenmads buffet i villaen"},
       {t:"11:00",title:"Backyard Olympics (pool, basket, tennis, fodbold)"},
-      {t:"14:00",title:"Frokost i huset"},
+      {t:"14:00",title:"BBQ buffet i huset"},
       {t:"15:00",title:"Transport til Blok 23",note:`<a class="lnk" href="https://maps.app.goo.gl/88Pby85xqtw1YzTe8" target="_blank">Kort (Blok 23)</a>`},
       {t:"15:30",title:"Gåtur gennem Blok 23 (1970’ernes socialistiske bolig drøm) til shooting range",note:`<a class="lnk" href="https://maps.app.goo.gl/LQW2EddsNBvLUqak7" target="_blank">Kort (range)</a>`},
       {t:"16:00",title:"Skydning på Belgrade shooting range - Kan du ramme noget som helst med en AK-47 Kalashnikov?",note:`<a class="lnk" href="https://belgradeshootingrange.com/wwi-wwii-antique-weapon-shooting/" target="_blank">Hjemmeside</a>`},
