--- a/index.html
+++ b/index.html
@@ -209,6 +209,14 @@ const TITO_HTML=`
 
 /* ====== ORDBOG ====== */
 const ORDBOG_HTML=`
+<div class="card">
+<h2>Kort forklaring</h2>
+<div class="note"><strong>Splav:</strong> En flydende natklub eller bar på Donau eller Sava. Åbner sent og lukker først, når solen står op. Splav er Serbiens svar på Ibiza – bare uden regler og med billigere shots.</div>
+<div class="note"><strong>Kafana:</strong> En traditionel serbisk taverne med lokal mad, rakija og levende musik. Kafana er en blanding af værtshus, restaurant og spontan koncert – alt sammen under ét tag.</div>
+<div class="note"><strong>Burek:</strong> Balkan-versionen af comfort food: en sprød, fedtfyldt, spiralformet butterdej fyldt med kød, ost, spinat eller kartofler. Burek er den serbiske croissant, hvis croissanter blev opfundet af folk med tømmermænd og et solidt forhold til ost.</div>
+<div class="note"><strong>Yugo:</strong> Yugo’en er Jugoslaviens stolthed og verdens vittighed – en lille, firkantet bil bygget af håb, jern og kompromiser.</div>
+<div class="note"><strong>Brutalistisk arkitektur:</strong> Brutalismen er betonens kærlighedserklæring til funktionalitet – store, rå bygninger, støbt uden pynt. Det ligner noget fra BLade Runner, men lugter stærtk af kommunisme, men de står stadig som monumenter over noget kan være både galt og genialt. </div>
+</div>
 <div class="card"><h2>Mini-ordbog</h2>
 <ul class="note">
 <li>Skål: <strong>Živeli</strong></li>
