Update mini-dictionary section in index.html

--- a/index.html
+++ b/index.html
@@ -217,11 +217,22 @@ const ORDBOG_HTML=`
 <div class="note"><strong>Yugo:</strong> Yugo’en er Jugoslaviens stolthed og verdens vittighed – en lille, firkantet bil bygget af håb, jern og kompromiser.</div>
 <div class="note"><strong>Brutalistisk arkitektur:</strong> Brutalismen er betonens kærlighedserklæring til funktionalitet – store, rå bygninger, støbt uden pynt. Det ligner noget fra BLade Runner, men lugter stærtk af kommunisme, men de står stadig som monumenter over noget kan være både galt og genialt. </div>
 </div>
-<div class="card"><h2>Mini-ordbog</h2>
+<div class="card"><h2>Ord forklaring</h2>
 <ul class="note">
 <li>Skål: <strong>Živeli</strong></li>
 <li>Tak: <strong>Hvala</strong></li>
 <li>Hej: <strong>Zdravo</strong></li>
+<li>Farvel: <strong>Ćao (udtales “tjao”)</strong></li>
+<li>Godmorgen: <strong>Dobro jutro</strong></li>
+<li>God aften: <strong>Dobro veče</strong></li>
+<li>En rakija, tak: <strong>Jedna rakija, molim</strong></li>
+<li>Øl: <strong>Pivo</strong></li>
+<li>Vand: <strong>Pivo</strong></li>
+<li>Mad: <strong>Živeli</strong></li>
+<li>Hvor er toilettet?: <strong>Gde je toalet?</strong></li>
+<li>Meget godt!: <strong>Vrlo dobro!</strong></li>
+<li>Kom nu!: <strong>Ajde! (bruges hele tiden – som “let’s go!”)</strong></li>
+<li>Tak for i aften: <strong>Hvala za večeras</strong></li>
 </ul>
 </div>`;
 
