--- a/index.html
+++ b/index.html
@@ -196,6 +196,8 @@ const TITO_HTML=`
 <div class="note">Tito brød med Stalin i 1948 og nægtede at lade Moskva bestemme. I stedet skabte han sit eget system – “jugoslavisk socialisme” – hvor folk kunne rejse, handle med Vesten og stadig kalde sig kommunister.</div>
 <div class="note">Han holdt et broget land af seks republikker sammen med en blanding af hård kontrol, politisk balance og personlig kult.</div>
 <div class="note">Da han døde i 1980, gik Jugoslavien langsomt i opløsning, og få år senere endte regionen i de blodige krige i 1990’erne.</div>
+<div class="note">"Bratstvo i jedinstvo" — broderskab og enhed.</div>
+
 </div>
 <div class="card">
 <h2>Fun facts om Tito</h2>
