Add Balkan timeline section to index.html

--- a/index.html
+++ b/index.html
@@ -207,7 +207,18 @@ const TITO_HTML=`
 <li>Hans private ø, Brioni, fungerede som et ferieparadis med egen zoo, filmstudie og luksusvillaer til statsledere.</li>
 <li>Han var gift tre gange, men det var magten, der var hans sande livspartner.</li>
 </ul>
-</div>`;
+</div>
+<div class="card">
+<h2>Balkan tidslinje</h2>
+<div class="note">1945 — Jugoslavien genfødes - Efter 2. Verdenskrig samler Tito seks republikker under én fane: Jugoslavien. Det betyder “de sydslaviske landes union” — en slags EU, bare med flere moustacher og færre regler.</div>
+<div class="note">1948 — Tito siger nej tak til Stalin - I stedet for at blive endnu en sovjetisk satellit vælger Tito sin egen vej. Stalin bliver rasende, men Tito bliver verdens cooleste kommunist — og får gæster fra både Øst og Vest.</div>
+<div class="note">1950’erne — Titoismen tager form - Jugoslavien opfinder sit eget system: arbejderstyrede fabrikker, gratis uddannelse, pas til alle — og cigaretter med filter. Kommunisme med komfort.</div>
+<div class="note">1960’erne — Guldalderen - Alt kører. Jugoslaverne rejser på ferie til Vesten, spiser is på stranden, og køber tøj fra Italien. Turisterne kalder det “det lykkelige diktatur”.</div>
+<div class="note">1970’erne — Tito på toppen - Han drikker med Castro, snakker med Kennedy og cruiser i sit Blå Tog. Landet kører stadig — så længe han gør.</div>
+<div class="note">1980 — Tito dør - Hele landet græder. Over 200 statsledere deltager i hans begravelse. Ingen ved, hvem der egentlig styrer nu — og ingen tør spørge.</div>
+<div class="note">1990’erne — Eksplosionen - Uden Tito falder alt fra hinanden. De gamle republikker erklærer uafhængighed, og krigene på Balkan bliver nogle af de blodigste i Europa siden 1945.</div>
+<div class="note">2000’erne — Genskabelsen - Serbien og Montenegro hænger kort sammen, men skilles i 2006. Resten af regionen forsøger at finde ud af, hvad de egentlig vil være, og hvem de er.</div>
+<div class="note">I dag — Balkan rebooted - Tito er væk, men hans ånd lever: man spiser stadig burek, synger gamle sange, og sværger til, at “det hele var bedre dengang.”</div>`;
 
 /* ====== ORDBOG ====== */
 const ORDBOG_HTML=`
