Update schedule with new transfer and dinner details

--- a/index.html
+++ b/index.html
@@ -107,9 +107,8 @@ const PLAN=[
     items:[
       {t:"13:15",title:"Fly til Berlin (U25266)"},
       {t:"15:40",title:"Fly til Begrad (W64010)"},
-      {t:"18:00",title:"Transfer til Villa Saga Paradiso"},
-      {t:"19:30",title:"Check ind i villaen",note:`<a class="lnk" href="https://maps.app.goo.gl/aBYmCsfGfky1yp8t7" target="_blank">Kort</a>`},
-      {t:"20:30",title:"Pizza og fadøl ved poolen - nogen skal hente snacks i supermarkedet",note:`<a class="lnk" href="https://maps.app.goo.gl/vqFFazi2S484eR869" target="_blank">Kort</a>`}
+      {t:"18:00",title:"Transfer til Villa Saga Paradiso",note:`<a class="lnk" href="https://maps.app.goo.gl/aBYmCsfGfky1yp8t7" target="_blank">Kort</a>`},
+      {t:"20:30",title:"Pizza og fadøl ved poolen - nogen skal hente snacks i supermarkedet",note:`<a class="lnk" href="https://maps.app.goo.gl/3CsQEJeYbPPRNT3m9" target="_blank">Kort</a>`}
     ]
   },
   {
