Update meta description and section names

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Belgrade Boys Trip</title>
-<meta name="description" content="Belgrade Boys Trip — program, praktiske råd, kultur og mini-ordbog. Offline-klar, mobilvenlig." />
+<meta name="description" content="Belgrade Boys Trip — program, praktiske råd, Tito og ord forklaring. Offline-klar, mobilvenlig." />
 <link rel="icon" href="favicon.ico">
 <style>
 html,body{margin:0;padding:0;background:#000;color:#fff;font-family:"Arial Black", Impact, system-ui, sans-serif;}
@@ -84,7 +84,7 @@ ul.note li{margin:12px 0 14px;line-height:1.55}
 
 <script>
 /* ====== TABS ====== */
-const SECTIONS=["Program","Praktiske råd","Tito","Mini-ordbog"];
+const SECTIONS=["Program","Praktiske råd","Tito","Ord forklaring"];
 let activeTab=0;
 const tabsEl=document.getElementById('tabs');
 const contentEl=document.getElementById('content');
