Fix formatting and update dinner note in itinerary

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ const PLAN=[
               <a class="lnk" href="https://maps.app.goo.gl/FuQiXE44Ki7bodCB9" target="_blank">Kort (Užina)</a>`},
       {t:"15:30",title:"Gåtur gennem Kalemegdan og Belgrade Fortress. Vi fortsætter gennem centrum (måske forbi en bar) til vi rammer Skadarlija - Beograds boheme-kvarter - en brostensbelagt gade fuld af livemusik, gamle kafanas, og duften af grill og rakija.",
         note:`<a class="lnk" href="https://maps.app.goo.gl/KexxE4sx9Y9xLC61A" target="_blank">Kort</a>`},
-      {t:"20:00",title:"Kafana dinner på Mali Vrabac. Maden er tung, Stemningen let  Maden er tung, Stemningen let.",
+      {t:"20:00",title:"Kafana dinner på Mali Vrabac. Maden er tung, Stemningen let.",
         note:`<a class="lnk" href="https://maps.app.goo.gl/N9nWMTykuMrbRNeT9" target="_blank">Kort</a>`},
       {t:"23:00",title:"Skadarlija skjulte barer - se kort. Hvem finder den bedste?",
         note:`<a class="lnk" href="https://www.google.com/maps/d/edit?mid=19pQHrPkREOXWZM15kHQFdD6acDqbed8&usp=sharing" target="_blank">Kort</a>`}
