Rename section from 'Ord forklaring' to 'Mini ordbog'

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ const ORDBOG_HTML=`
 <div class="note"><strong>Yugo:</strong> Yugo’en er Jugoslaviens stolthed og verdens vittighed – en lille, firkantet bil bygget af håb, jern og kompromiser.</div>
 <div class="note"><strong>Brutalistisk arkitektur:</strong> Brutalismen er betonens kærlighedserklæring til funktionalitet – store, rå bygninger, støbt uden pynt. Det ligner noget fra BLade Runner, men lugter stærtk af kommunisme, men de står stadig som monumenter over noget kan være både galt og genialt. </div>
 </div>
-<div class="card"><h2>Ord forklaring</h2>
+<div class="card"><h2>Mini ordbog</h2>
 <ul class="note">
 <li>Skål: <strong>Živeli</strong></li>
 <li>Tak: <strong>Hvala</strong></li>
