Change event title and update description
Updated event title and description for clarity.

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@ ul.note li{margin:12px 0 14px;line-height:1.55}
   <div class="header">
     <div class="logo">
       <div>
-        <h1>Belgrade Boys Trip</h1>
-        <div class="sub">23–26 oktober · Villa Saga Paradiso · 14 deltagere</div>
+        <h1>Rejseklubben på røvtur i Beograd</h1>
+        <div class="sub">Et Balkan-eventyr med mere beton end fornuft og mere rakija end søvn. En produktion af Rejseklubben™ – kendt for store ambitioner, dårlige idéer og fremragende selskab.</div>
       </div>
     </div>
     <div class="tabs" id="tabs"></div>
